# backend/api/db/data.js
@@ -1,0 +1,16 @@
+// /backend/data.js
+const mongoose = require("mongoose");
+const Schema = mongoose.Schema;
+
+// this will be our data base's data structure
+const DataSchema = new Schema(
+  {
+    ParameterID: String,
+    AddTimeStamp: Number, // with ms accuracy
+    Value: Number
+  },
+  { timestamps: true }
+);
+
+// export the new Schema so we could modify it using Node.js
+module.exports = mongoose.model("Data", DataSchema, "data");
