# backend/api/swagger/swagger.yaml
@@ -786,6 +786,90 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /parameter/addParameterToDevice:
+    x-swagger-router-controller: parameterManage
+    get:
+      tags:
+      - parameter
+      summary: add parameter to device
+      description:  add parameter to device
+      # used as the method name of the controller
+      operationId: addParameterToDevice
+      parameters:
+      - name: DeviceID
+        in: query
+        description: DeviceID of the parameter
+        required: true
+        type: string
+      - name: ParameterID
+        in: query
+        description: ParameterID
+        required: true
+        type: string
+      - name: AssetID
+        in: query
+        description: AssetID
+        required: true
+        type: string
+      responses:
+        200:
+          description: Success
+          schema:
+            type: object
+            properties:
+              Items:
+                type: array
+                items:
+                  $ref: "#/definitions/ParameterModel"
+              Count:
+                type: integer
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /parameter/removeParameterFromDevice:
+    x-swagger-router-controller: parameterManage
+    get:
+      tags:
+      - parameter
+      summary: remove parameter to device
+      description:  remove parameter to device
+      # used as the method name of the controller
+      operationId: removeParameterFromDevice
+      parameters:
+      - name: DeviceID
+        in: query
+        description: DeviceID of the parameter
+        required: true
+        type: string
+      - name: ParameterID
+        in: query
+        description: ParameterID
+        required: true
+        type: string
+      - name: AssetID
+        in: query
+        description: AssetID
+        required: true
+        type: string
+      responses:
+        200:
+          description: Success
+          schema:
+            type: object
+            properties:
+              Items:
+                type: array
+                items:
+                  $ref: "#/definitions/ParameterModel"
+              Count:
+                type: integer
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /parameter/getParameterByDevice:
     x-swagger-router-controller: parameterManage
     get:
@@ -889,9 +973,6 @@ paths:
       # used as the method name of the controller
       operationId: createParameter
       parameters:
-      - name: DeviceID
-        in: query
-        type: string
       - in: body
         name: body
         description: Parameter object thats needs to be added
@@ -1042,13 +1123,7 @@ paths:
         name: body
         required: true
         schema:
-          properties:
-            Data:
-              type: array
-              items:
-                $ref: '#/definitions/AddDataModel'
-            Timestamp:
-              type: integer
+          $ref: '#/definitions/AddDataModel'
       responses:
         200:
           description: Success
@@ -1262,15 +1337,13 @@ definitions:
         type: string
       CurrentValue: 
         type: string
-      ParameterName: 
+      DisplayName: 
         type: string
-      ParameterTag:
-        type: string
-      ParameterType:
-        type: string
-      ParameterUnit:
+      Tag:
         type: string
       Equation:
+        type: string
+      Unit:
         type: string
   UpdateParameterModel:
     type: object
